updated flask api for getting day states, also updated js to update table with data

--- a/web/homepage.html
+++ b/web/homepage.html
@@ -12,17 +12,14 @@
                 <input id="country-value" type="text" placeholder="Search Country">
                 </input>
                 <select name="variants" id="variants">
+                <option> </option>
                 </select>
             </div>
             <div id="day-stats">
-                <table>
+                <table id="daily-table">
                     <tr>
                         <td>Date</td>
                         <td>Total Infections</td>
-                    </tr>
-                    <tr>
-                        <td>10-12-10</td>
-                        <td>2</td>
                     </tr>
                 </table>
             </div>
