adding country selection instead of searching

--- a/web/homepage.html
+++ b/web/homepage.html
@@ -9,8 +9,8 @@
     <body>
         <div style="display: flex; padding-top: 10px;">    
             <div id="search-button">
-                <input id="country-value" type="text" placeholder="Search Country">
-                </input>
+                <select name="country" id="country">
+                </select>
                 <select name="variants" id="variants">
                 <option> </option>
                 </select>
