added most website features

--- a/web/homepage.html
+++ b/web/homepage.html
@@ -10,10 +10,12 @@
         <div style="display: flex; padding-top: 10px;">    
             <div id="search-button">
                 <select name="country" id="country">
+                <option> </option>
                 </select>
                 <select name="variants" id="variants">
                 <option> </option>
                 </select>
+                <button id="sort-button">Sort Countries</button>
             </div>
             <div id="day-stats">
                 <table id="daily-table">
