--- a/web/homepage.html
+++ b/web/homepage.html
@@ -9,11 +9,13 @@
     <body>
         <div style="display: flex; padding-top: 10px;">    
             <div id="search-button">
-                <input id="country-value" type="text" placeholder="Search Country">
-                </input>
+                <select name="country" id="country">
+                <option> </option>
+                </select>
                 <select name="variants" id="variants">
                 <option> </option>
                 </select>
+                <button id="sort-button">Sort Countries</button>
             </div>
             <div id="day-stats">
                 <table id="daily-table">
